<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!--share and copy item in "more" menu-->
    <item android:id="@+id/menu_share"
        android:icon="@drawable/ic_share_black_24dp"
        android:title="@string/share_link"/>

    <item android:id="@+id/menu_copy"
        android:icon="@drawable/ic_content_copy_black_24dp"
        android:title="@string/copy_link"/>
</menu>